--- a/lib/application.css
+++ b/lib/application.css
@@ -60,3 +60,55 @@ font-size: 85px;
 letter-spacing: 15px;
 
 }
+#start {
+width: 1000px;
+height: 700px;
+background: rgba(0,0,0,0.5);
+z-index: 7;
+position: relative;
+display: block;
+}
+#start div {
+position: absolute;
+color:white;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+font-size: 85px;
+letter-spacing: 15px;
+
+}
+
+h1 {
+  background: -webkit-linear-gradient(#eee, #333);
+ -webkit-background-clip: text;
+ -webkit-text-fill-color: transparent;
+  font-size: 70px;
+  text-align: center;
+}
+h2 {
+  text-align: center;
+  font-size: 16px;
+  letter-spacing: 8px;
+}
+h3 {
+  text-align: center;
+  font-size: 12px;
+  letter-spacing: 6px;
+}
+#start-button {
+
+  background-color:#eee;
+  border: none;
+  color: grey;
+  padding: 15px 32px;
+  text-align: center;
+
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  outline: none;
+  margin: 13px 20px 35px 13px;
+
+}
