--- a/lib/application.css
+++ b/lib/application.css
@@ -108,7 +108,7 @@ h3 {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  border-radius: 5px;
+  border-radius: 30px;
   outline: none;
   margin: 13px 20px 35px 13px;
   letter-spacing: 4px;
@@ -116,6 +116,51 @@ h3 {
 }
 
 #start-button:hover {
-  background: darkgrey;
+  background: green;
+  color: white;
+}
+
+#game-over {
+width: 1000px;
+height: 700px;
+background: rgb(0,0,0);
+z-index: 7;
+position: relative;
+display: block;
+padding-top: 7px;
+padding-left: 7px;
+z-index: 2;
+}
+
+#game-over div {
+position: absolute;
+color:white;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+font-size: 85px;
+letter-spacing: 15px;
+}
+
+#redo-button {
+
+  background-color:#eee;
+  border: none;
+  color: grey;
+  padding: 15px 32px;
+  text-align: center;
+
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 30px;
+  outline: none;
+  margin: 13px 20px 35px 13px;
+  letter-spacing: 4px;
+
+}
+
+#redo-button:hover {
+  background: green;
   color: white;
 }
